--- a/app/views/user/post_members/new.html.erb
+++ b/app/views/user/post_members/new.html.erb
@@ -49,7 +49,7 @@
           <div class="field">
             <div class="label">
               <label>
-                友達リスト
+                フレンドリスト
               </label>
             </div>
             <div class="post-member__friend-list">
