--- a/app/views/user/post_members/new.html.erb
+++ b/app/views/user/post_members/new.html.erb
@@ -43,32 +43,41 @@
       <span class="sp-sub-title">すでにアカウントを持っている人を招待する</span>
     </div>
 
-    <div class="post-member-form">
-      <%= form_with model: @post_members, url: post_members_path, local: true, method: :post do |f| %>
-        <div class="form">
-          <div class="field">
-            <div class="label">
-              <label>
-                フレンドリスト
-              </label>
+    <% if current_user.friend_users.blank? %>
+      <p class="post-member__no-friend-title">
+        <span>フレンドがいません。</span>
+        <span>
+          ヘッダーの<%= image_tag "search.png", class:"post-member__no-friend-search-img" %>からフレンド追加できます。
+        </span>
+      </p>
+    <% else %>
+      <div class="post-member-form">
+        <%= form_with model: @post_members, url: post_members_path, local: true, method: :post do |f| %>
+          <div class="form">
+            <div class="field">
+              <div class="label">
+                <label>
+                  フレンドリストから選ぶ
+                </label>
+              </div>
+              <div class="post-member__friend-list">
+                <%= f.collection_check_boxes(:user_id, @not_invited_friends, :id, :email, include_hidden: false) do |b| %>
+                  <span class="post-member__friend-list-item">
+                    <%= b.check_box %>
+                    <%= b.label class:"text-ellipsis" %>
+                  </span>
+                <% end %>
+              </div>
             </div>
-            <div class="post-member__friend-list">
-              <%= f.collection_check_boxes(:user_id, @not_invited_friends, :id, :email, include_hidden: false) do |b| %>
-                <span class="post-member__friend-list-item">
-                  <%= b.check_box %>
-                  <%= b.label class:"text-ellipsis" %>
-                </span>
-              <% end %>
+            <div class="field">
+              <div class="button-wrapper">
+                <%= f.submit "招待する", class:"app-button conversion" %>
+              </div>
             </div>
           </div>
-          <div class="field">
-            <div class="button-wrapper">
-              <%= f.submit "招待する", class:"app-button conversion" %>
-            </div>
-          </div>
-        </div>
-      <% end %>
-    </div>
+        <% end %>
+      </div>
+    <% end %>
   </div>
 </div>
 
@@ -113,6 +122,19 @@
     border-left: 2px solid #f582ae;
     padding-left: 12px;
   }
+}
+
+.post-member__no-friend-title{
+  text-align: center;
+  padding: 28px 0px;
+  font-size: 14px;
+  display: flex;
+  flex-direction: column;
+}
+
+.post-member__no-friend-search-img{
+  width: 20px;
+  height: 20px;
 }
 
 .post-member-form{
