--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,8 +9,9 @@
           <%= link_to "ログイン", new_user_session_path, class:"top__signin-btn top__btn" %>
         </div>
       </div>
+      <%= render "shared/index" %>
     <% else %>
-      
+      <%= render "shared/index" %>
     <% end %>
   </div>
 </div>
