--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -29,7 +29,7 @@
         <ul class="drawer-menu">
           <li>
             <a class="drawer-brand" href="#">
-              <button type="button" class="drawer-toggle drawer-hamburger">
+              <button type="button" class="drawer-toggle drawer-hamburger hover-opacity">
                 <span class="sr-only">toggle navigation</span>
                 <span class="drawer-hamburger-icon"></span>
               </button>
