--- a/app/views/devise/invitations/edit.html.erb
+++ b/app/views/devise/invitations/edit.html.erb
@@ -13,6 +13,17 @@
           <div class="field">
             <div class="label">
               <label>
+                性別
+              </label>
+            </div>
+            <%= f.radio_button :sex, :male %>
+            <%= f.label :sex_male, "男性" %>
+            <%= f.radio_button :sex, :female %>
+            <%= f.label :sex_female, "女性" %>
+          </div>
+          <div class="field">
+            <div class="label">
+              <label>
                 パスワード
               </label>
             </div>
