--- a/app/views/shared/_inviting.html.erb
+++ b/app/views/shared/_inviting.html.erb
@@ -1,9 +1,9 @@
 <div class="invited-member-list">
-  <p class="invited-member-list-title">招待中</p>
+  <p class="invited-member-list-title">選択中</p>
 
   <% if @invited_user.blank? %>
     <span>
-      招待中のメンバーはいません
+      選択中のメンバーはいません
     </span>
   <% else %>
     <% if @unconfirmed_members.present? %>
