--- a/app/views/shared/_inviting.html.erb
+++ b/app/views/shared/_inviting.html.erb
@@ -1,5 +1,5 @@
 <div class="invited-member-list">
-  <p class="invited-member-list-title">選択中</p>
+  <p class="invited-member-list-title">選択中メンバー</p>
 
   <% if @invited_user.blank? %>
     <span>
