--- a/app/assets/stylesheets/post_image.scss
+++ b/app/assets/stylesheets/post_image.scss
@@ -39,4 +39,19 @@
     font-size: 20px;
   }
 }
+
+.post-item__member-img-wrapper{
+  display: flex;
+  justify-content: space-evenly;
+}
+.post-item__member-img{
+  width: 64px;
+  height: 64px;
+  object-fit: cover;
+  border-radius: 50%;
+  @media(max-width: 415px){
+    width: 48px;
+    height: 48px;
+  }
+}
 }
