--- a/app/views/shared/_inviting.html.erb
+++ b/app/views/shared/_inviting.html.erb
@@ -1,7 +1,7 @@
 <div class="invited-member-list">
   <p class="invited-member-list-title">選択中メンバー</p>
 
-  <% if @invited_user.blank? %>
+  <% if @invited_user_exclude_me.blank? %>
     <span>
       選択中のメンバーはいません
     </span>
