--- a/app/views/shared/_post_image.html.erb
+++ b/app/views/shared/_post_image.html.erb
@@ -4,6 +4,12 @@
       <p class="post-item__title">
         <%= place %>で<%= time %>から一緒にご飯いきませんか？
       </p>
+
+      <div class="post-item__member-img-wrapper">
+        <% invited_user_include_me.each do |post_member| %>
+          <%= image_tag post_member.user.user_profile.image.icon.url, class:"post-item__member-img" %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
