--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -19,7 +19,7 @@
         </div>
 
         <% if current_user.invite_any? %>
-          <h2 style="font-size: 16px;">投稿イメージ</h2>
+          <p class="post-preview-title">投稿イメージ</p>
           <%= render "shared/post_image",
             place: @post.place,
             time: @post.time.strftime("%-m月%-d日 %H:%M"),
@@ -83,11 +83,15 @@
 .invite-send-btn-wrapper{
   display: flex;
   justify-content: center;
-  margin-bottom: 36px;
+  margin-bottom: 42px;
 }
 .invite-send-btn{
   background: #8bd3dd;
   border-color: #8bd3dd;
+}
+
+.post-preview-title{
+  text-align: center;
 }
 
 .post-select-link-wrapper{
