--- a/app/views/shared/_post_image.html.erb
+++ b/app/views/shared/_post_image.html.erb
@@ -7,7 +7,7 @@
 
       <div class="post-item__member-img-wrapper">
         <% invited_user_include_me.each do |post_member| %>
-          <%= image_tag post_member.user.user_profile.image.icon.url, class:"post-item__member-img" %>
+          <%= image_tag post_member.user.user_profile.image.url, class:"post-item__member-img" %>
         <% end %>
       </div>
     </div>
