--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -32,6 +32,9 @@
     font-family: Lato,Helvetica Neue,Arial,Helvetica,sans-serif;
     line-height: 1.21428571em;
     border: 2px solid #172c66;
+    @media(max-width: 567px){
+      width: 100%;
+    }
   }
 }
 
@@ -111,7 +114,7 @@
 }
 
 .icon-field{
-  margin-bottom: 48px;
+  margin-bottom: 36px;
 }
 
 .form-attention-text{
