--- a/app/views/user/user_profiles/edit.html.erb
+++ b/app/views/user/user_profiles/edit.html.erb
@@ -5,6 +5,24 @@
     </h1>
     <%= form_with model: @user_profile, url: user_profile_path, local: true, method: :patch do |f| %>
       <div class="form">
+
+        <div class="field icon-field">
+          <div class="user-profile__preview-box-wrapper">
+            <div class="user-profile__preview-box" id='preview_user_profile_img'>
+              <style>
+                #preview_user_profile_img{
+                  background-image: url("<%= current_user.user_profile.image.url.html_safe %>");
+                }
+              </style>
+            </div>
+            <label for="user_profile_img" class="user-profile__file-field-label">
+              <%= embedded_svg("upload.svg") %>
+            </label>
+            <%= f.file_field :image, class:"user-profile__file-field", id:'user_profile_img' %>
+          </div>
+          <p style="text-align:center;">画像をアップロード</p>
+        </div>
+
         <div class="field">
           <div class="label">
             <label>
@@ -29,29 +47,9 @@
           </div>
           <%= f.select :job, UserProfile.jobs_i18n.keys.map { |k| [UserProfile.jobs_i18n[k], k]}, {prompt: "選択してください"} %>
         </div>
-        <div class="field icon-field">
-          <div class="label">
-            <label>
-              アイコン変更
-            </label>
-          </div>
+        
 
-          <div class="user-profile__preview-box-wrapper">
-            <div class="user-profile__preview-box" id='preview_user_profile_img'>
-              <style>
-                #preview_user_profile_img{
-                  background-image: url("<%= current_user.user_profile.image.url.html_safe %>");
-                }
-              </style>
-            </div>
-            <label for="user_profile_img" class="user-profile__file-field-label">
-              <%= embedded_svg("upload.svg") %>
-            </label>
-            <%= f.file_field :image, class:"user-profile__file-field", id:'user_profile_img' %>
-          </div>
-        </div>
-
-        <div class="field">
+        <div class="field" style="margin-top:64px;">
           <div class="button-wrapper">
             <%= f.submit "プロフィール更新", class:"app-button conversion" %>
           </div>
