--- a/app/views/user/post_members/new.html.erb
+++ b/app/views/user/post_members/new.html.erb
@@ -132,6 +132,8 @@
   .sp-sub-title{
     border-left: 2px solid #f582ae;
     padding-left: 12px;
+    font-weight: 700;
+    font-size: 16px;
   }
 }
 
