--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -97,12 +97,13 @@
 
 .post-preview-title{
   text-align: center;
+  font-weight: 700;
 }
 
 .post-select-link-wrapper{
   display: flex;
   align-items: center;
-  font-size: 14px;
+  font-size: 12px;
 }
 .post-select-link{
   text-decoration: underline;
