--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -76,7 +76,7 @@
 
           <div class="field">
             <div class="button-wrapper">
-              <%= f.submit "次へ（メンバーを選ぶ）", class:"app-button next" %>
+              <%= f.submit "次へ（メンバーを選ぶ）", class:"app-button conversion" %>
             </div>
           </div>
       <% end %>
