--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -49,3 +49,57 @@
   color: #fff;
   border: 2px solid #fff;
 }
+
+.top__user-profile{
+  display: flex;
+  padding: 18px 84px;
+  @media(max-width: 567px){
+    padding: 12px 32px;
+  }
+}
+.top__user-icon-wrapper{
+  margin-right: 36px;
+  @media(max-width: 567px){
+    margin-right: 20px;
+  }
+  .top__user-icon{
+    width: 84px;
+    height: 84px;
+    border-radius: 50%;
+    object-fit: cover;
+    @media(max-width: 567px){
+      width: 72px;
+      height: 72px;
+    }
+  }
+}
+
+.top__user-info{
+  display: flex;
+  flex-direction: column;
+  .top__user-info-header{
+    display: flex;
+    align-items: center;
+    margin-bottom: 8px;
+    .top__user-name{
+      font-size: 28px;
+      margin-right: 8px;
+      @media(max-width: 567px){
+        font-size: 24px;
+      }
+    }
+    .top__user-setting-btn{
+      color: #000;
+      height: 24px;
+      @media(max-width: 567px){
+        display: none;
+      }
+    }
+  }
+  .top__user-info-status{
+    display: flex;
+    .top__user-info-status-item{
+      margin-right: 8px;
+    }
+  }
+}
