--- a/app/views/shared/_top_profile.html.erb
+++ b/app/views/shared/_top_profile.html.erb
@@ -16,8 +16,10 @@
 
         <div class="top__user-info-status">
           <div class="top__user-info-status-item">
-            <span>投稿</span>
-            
+            <span>
+              投稿
+              <%= render "shared/post_status" %>
+            </span>
           </div>
           <div>
             <span>招待</span>
