--- a/app/views/shared/_top_profile.html.erb
+++ b/app/views/shared/_top_profile.html.erb
@@ -23,6 +23,7 @@
           </div>
           <div>
             <span>招待</span>
+            <%= render "shared/invite_status" %>
           </div>
         </div>
     </div>
