--- a/app/views/shared/_top_profile.html.erb
+++ b/app/views/shared/_top_profile.html.erb
@@ -6,7 +6,7 @@
 
     <div class="top__user-info">
         <div class="top__user-info-header">
-          <span class="top__user-name">
+          <span class="top__user-name text-ellipsis">
             <%= @user_profile.name %>
           </span>
           <button class="top__user-setting-btn">
