--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -52,9 +52,9 @@
 
 .top__user-profile{
   display: flex;
-  padding: 18px 64px;
+  padding: 18px 0px 18px 64px;
   @media(max-width: 567px){
-    padding: 12px 32px;
+    padding: 18px 0px 18px 32px;
   }
 }
 .top__user-icon-wrapper{
@@ -77,6 +77,7 @@
 .top__user-info{
   display: flex;
   flex-direction: column;
+  width: 100%;
   .top__user-info-header{
     display: flex;
     align-items: center;
@@ -84,13 +85,18 @@
     .top__user-name{
       font-size: 28px;
       margin-right: 8px;
+      max-width: 240px;
       @media(max-width: 567px){
         font-size: 24px;
+        max-width: 200px;
       }
     }
     .top__user-setting-btn{
+      display: flex;
+      align-items: center;
       color: #000;
       height: 24px;
+      font-size: 10px;
       @media(max-width: 567px){
         display: none;
       }
