--- a/app/views/shared/_top_profile.html.erb
+++ b/app/views/shared/_top_profile.html.erb
@@ -17,12 +17,12 @@
         <div class="top__user-info-status">
           <div class="top__user-info-status-item">
             <span>
-              投稿
+              自分の投稿
               <%= render "shared/post_status" %>
             </span>
           </div>
           <div>
-            <span>招待</span>
+            <span>あなたへの招待</span>
             <%= render "shared/invite_status" %>
           </div>
         </div>
