--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -56,7 +56,7 @@
   background: #fff;
   border-radius: 8px;
   margin: 12px 0;
-  // box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%);
+  box-shadow: 0 .5rem 1rem 0 rgba(0, 0, 0, 0.15);
   @media(max-width: 567px){
     padding: 18px 0px 18px 32px;
   }
