--- a/app/views/shared/_top_profile.html.erb
+++ b/app/views/shared/_top_profile.html.erb
@@ -9,7 +9,7 @@
           <span class="top__user-name text-ellipsis">
             <%= @user_profile.name %>
           </span>
-          <button class="top__user-setting-btn">
+          <button class="top__user-setting-btn hover-opacity">
             <%= link_to "プロフィール設定", edit_user_profile_path %>
           </button>
         </div>
