--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -50,15 +50,22 @@
   border: 2px solid #fff;
 }
 
-.top__user-profile{
+.top__header-user-action-area{
   display: flex;
-  padding: 18px 0px 18px 64px;
+  flex-direction: column;
   background: #fff;
   border-radius: 8px;
   margin: 12px 0;
   box-shadow: 0 .5rem 1rem 0 rgba(0, 0, 0, 0.15);
+  padding: 18px 0;
+}
+
+.top__user-profile{
+  display: flex;
+  padding-left: 64px;
+  margin-bottom: 24px;
   @media(max-width: 567px){
-    padding: 18px 0px 18px 32px;
+    padding-left: 32px;
   }
 }
 .top__user-icon-wrapper{
@@ -128,4 +135,9 @@
       }
     }
   }
+}
+
+.top__select-btn-wrapper{
+  display: flex;
+  justify-content: center;
 }
