--- a/app/views/shared/_top_profile.html.erb
+++ b/app/views/shared/_top_profile.html.erb
@@ -18,7 +18,7 @@
             <div class="top__user-info-status">
               <div class="top__user-info-status-item-wrapper">
                 <div class="top__user-info-status-item">
-                  <span>自分の投稿</span>
+                  <span>自分の募集</span>
                   <%= render "shared/post_status" %>
                 </div>
               </div>
