--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -132,6 +132,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        font-size: 14px;
       }
     }
   }
