--- a/app/views/shared/_top_profile.html.erb
+++ b/app/views/shared/_top_profile.html.erb
@@ -33,9 +33,9 @@
     </div>
 
     <div class="top__select-btn-wrapper">
-      <button class="">アタック隊作成</button>
-      <button>
-        <%= link_to "募集作成", new_post_path %>
+      <button class="top__select-btn attack-btn hover-opacity">アタック隊作成</button>
+      <button class="top__select-btn post-create-btn hover-opacity">
+        <%= link_to "募集作成", new_post_path, class:"top__select-link" %>
       </button>
     </div>
 </div>
