--- a/app/views/shared/_top_profile.html.erb
+++ b/app/views/shared/_top_profile.html.erb
@@ -34,7 +34,7 @@
 
     <div class="top__select-btn-wrapper">
       <button class="top__select-btn attack-btn hover-opacity">
-        <%= link_to "アタック隊作成", new_attack_path, class:"top__select-link" %>
+        <%= link_to "アタック隊作成", new_attack_group_path, class:"top__select-link" %>
       </button>
       <button class="top__select-btn post-create-btn hover-opacity">
         <%= link_to "募集作成", new_post_path, class:"top__select-link" %>
