--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -11,7 +11,7 @@
       </div>
       <%= render "shared/index" %>
     <% else %>
-      <%= render "shared/top_profile" %>
+      <%= render "shared/top/profile" %>
       <%= render "shared/index" %>
     <% end %>
   </div>
