--- a/app/views/shared/top/_profile.html.erb
+++ b/app/views/shared/top/_profile.html.erb
@@ -19,13 +19,13 @@
               <div class="top__user-info-status-item-wrapper">
                 <div class="top__user-info-status-item">
                   <span>自分の募集</span>
-                  <%= render "shared/post_status" %>
+                  <%= render "shared/top/post_status" %>
                 </div>
               </div>
               <div>
                 <div class="top__user-info-status-item">
                   <span>あなたへの招待</span>
-                  <%= render "shared/invite_status" %>
+                  <%= render "shared/top/invite_status" %>
                 </div>
               </div>
             </div>
