--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -12,7 +12,7 @@
       <%= render "shared/index" %>
     <% else %>
       <%= render "shared/top/profile" %>
-      <%= render "shared/index" %>
+      <%= render "shared/top/index" %>
     <% end %>
   </div>
 </div>
