--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -3,7 +3,7 @@
     <% if @post.present? %>
       <% if current_user.all_member_invite?(@post) %>
         <h1>すでに募集が作成されています</h1>
-        <%= render "shared/post_image",
+        <%= render "shared/posts/post_image",
           place: @post.place,
           time: @post.time.strftime("%-m月%-d日 %H:%M"),
           join_member: @join_member
@@ -25,7 +25,7 @@
 
         <% if current_user.invite_any? %>
           <p class="post-preview-title">投稿イメージ</p>
-          <%= render "shared/post_image",
+          <%= render "shared/posts/post_image",
             place: @post.place,
             time: @post.time.strftime("%-m月%-d日 %H:%M"),
             join_member: @join_member
