--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -36,50 +36,7 @@
         募集を<%= link_to "編集する", edit_post_path(@post.id), class:"post-select-link" %>・<%= link_to "削除する", post_path(@post.id), method: :delete, data: { confirm: "参加者全員に通知がいきます。よろしいでしょうか？" }, class:"post-select-link" %>
       </div>
     <% else %>
-      <h1>
-        合コンをセッティングする
-      </h1>
-      <%= form_with model: @new_post, url: posts_path, local: true, method: :post do |f| %>
-        <div class="form">
-          <div class="field">
-            <div class="label">
-              <label>
-                場所
-              </label>
-            </div>
-            <%= f.text_field :place, type: "text", :placeholder => "東京駅周辺" %>
-          </div>
-          <div class="field">
-            <div class="label">
-              <label>
-                <%= @sex %>の人数（自分を合わせて）
-              </label>
-            </div>
-            <%= f.select :number, options_for_select((2..10).to_a), {prompt: "選択してください"} %>
-          </div>
-          <div class="field">
-            <div class="label">
-              <label>
-                時間帯
-              </label>
-            </div>
-            <%= f.datetime_select :time, minute_step: 10 %>〜
-          </div>
-          <div class="field">
-            <div class="label">
-              <label>
-                ひとこと
-              </label>
-            </div>
-            <%= f.text_field :detail, type: "text", :placeholder => "19時から暇な方一緒に飲みましょう！" %>
-          </div>
-
-          <div class="field">
-            <div class="button-wrapper">
-              <%= f.submit "次へ（#{@sex}メンバーを選ぶ）", class:"app-button conversion" %>
-            </div>
-          </div>
-      <% end %>
+      <%= render "shared/posts/form" %>
     <% end %>
   </div>
 </div>
