--- a/app/views/shared/attack_groups/_form.html.erb
+++ b/app/views/shared/attack_groups/_form.html.erb
@@ -1,5 +1,5 @@
 <h1>
-  アタック隊作成
+  アタックチーム作成
 </h1>
 <%= form_with model: @attackers, url: attack_groups_path, local: true, method: :post do |f| %>
   <div class="form">
