--- a/app/views/shared/_inviting.html.erb
+++ b/app/views/shared/_inviting.html.erb
@@ -1,5 +1,5 @@
 <div class="invited-member-list">
-  <p class="invited-member-list-title">招待中メンバー</p>
+  <p class="invited-member-list-title">📌招待中メンバー</p>
 
   <% if @invited_user_exclude_me.blank? %>
     <span>
