--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,7 +9,7 @@
           <%= link_to "ログイン", new_user_session_path, class:"top__signin-btn top__btn" %>
         </div>
       </div>
-      <%= render "shared/index" %>
+      <%= render "shared/top/index" %>
     <% else %>
       <%= render "shared/top/profile" %>
       <%= render "shared/top/index" %>
