--- a/app/views/shared/top/_profile.html.erb
+++ b/app/views/shared/top/_profile.html.erb
@@ -11,7 +11,7 @@
                 <%= @user_profile.name %>
               </span>
               <button class="top__user-setting-btn hover-opacity">
-                <%= link_to "プロフィール設定", edit_user_profile_path %>
+                <%= link_to "プロフィール編集", edit_user_profile_path %>
               </button>
             </div>
 
