--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -43,7 +43,7 @@
               <%= link_to "募集作成", new_post_path, class:"drawer-menu-item" %>
             </li>
             <li>
-              <%= link_to "プロフィール設定", edit_user_profile_path, class:"drawer-menu-item" %>
+              <%= link_to "プロフィール編集", edit_user_profile_path, class:"drawer-menu-item" %>
             </li>
             <li>
               <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class:"drawer-menu-item" %>
