--- a/app/views/user/post_members/new.html.erb
+++ b/app/views/user/post_members/new.html.erb
@@ -61,32 +61,11 @@
           <span>全フレンド選択済みです</span>
         </p>
       <% else %>
-        <div class="post-member-form">
-          <%= form_with model: @post_members, url: post_members_path, local: true, method: :post do |f| %>
-            <div class="form">
-              <div class="field">
-                <div class="label">
-                  <label>
-                    フレンドリストから選ぶ
-                  </label>
-                </div>
-                <div class="post-member__friend-list">
-                  <%= f.collection_check_boxes(:user_id, @not_invited_friends, :id, :email, include_hidden: false) do |b| %>
-                    <span class="post-member__friend-list-item">
-                      <%= b.check_box %>
-                      <%= b.label class:"text-ellipsis" %>
-                    </span>
-                  <% end %>
-                </div>
-              </div>
-              <div class="field">
-                <div class="button-wrapper">
-                  <%= f.submit "招待確定する", class:"app-button conversion" %>
-                </div>
-              </div>
-            </div>
-          <% end %>
-        </div>
+        <%= render "shared/friend_list",
+          model: @post_members,
+          url: post_members_path,
+          listed_friends: @not_invited_friends
+        %>
       <% end %>
     <% end %>
   </div>
@@ -154,22 +133,5 @@
 .post-member__exception-search-img{
   width: 20px;
   height: 20px;
-}
-
-.post-member-form{
-  padding: 32px 0;
-}
-
-.post-member__friend-list{
-  display: flex;
-  flex-direction: column;
-  max-height: 200px;
-  overflow: scroll;
-}
-
-.post-member__friend-list-item{
-  display: flex;
-  margin: 4px 0px;
-  font-size: 14px;
 }
 </style>
