--- a/app/views/shared/_inviting.html.erb
+++ b/app/views/shared/_inviting.html.erb
@@ -49,3 +49,42 @@
     <% end %>
   <% end %>
 </div>
+
+<style>
+.invited-member-list{
+  background: #f3d2c1;
+  border-radius: 4px;
+  padding: 16px;
+  margin-bottom: 36px;
+}
+
+.invited-member-list-title{
+  font-weight: 700;
+  margin-bottom: 16px;
+}
+
+.invited-member-list-sub-title{
+  font-weight: 700;
+  font-size: 14px;
+}
+
+.invited-member-item{
+  display: flex;
+  align-items: center;
+  line-height: 24px;
+}
+
+.invite-cancel-img{
+  width: 18px;
+}
+
+.invite-cancel-link{
+  display: flex;
+  align-items: center;
+  margin-right: 6px;
+}
+
+.invited-email{
+  font-size: 14px;
+}
+</style>
